# jorma

./: .gitignore  Makefile  README.md  examples.mk  pyproject.toml  roles.py
sdxpy/: examples.mk
sdxpy/archive/: Makefile  backup.py  hash_all.py  index.md  jorma.mk  test_backup.py  test_mock_tree.py
sdxpy/binary/: Makefile  binary_notation.out  calcsize.out  index.md  jorma.mk  pack_unicode.py  variable_packing.py  variable_unpacking.py
sdxpy/cache/: Makefile  cache_base.py  cache_filesystem.py  cache_io.py  cache_limited.py  hash_stream.py  index.md  index_base.py  index_csv.py  jorma.mk  test_cache_filesystem.py  test_cache_limited.py  test_index_csv.py
sdxpy/check/: Makefile  attrs.py  index.md  jorma.mk  parse.py  visitor.py
sdxpy/db/: Makefile  blocked.py  blocked_file.py  cleanup.py  file_backed.py  index.md  jorma.mk  just_dict_original.py  just_dict_refactored.py  record.py  record_original.py  show_packed_records.py  test_db_original.py
sdxpy/debugger/: index.md
sdxpy/docgen/: Makefile  add_double.py  doc_extract.py  doc_format.py  double_and_print.py  index.md
sdxpy/dup/: Makefile  brute_force_1.py  brute_force_2.py  grouped.py  index.md  jorma.mk  naive_hash.py  using_sha256.py
sdxpy/ftp/: Makefile  index.md  jorma.mk
sdxpy/func/: Makefile  adder.py  closure.py  closure_list.py  counter_succeed.py  example_def.py  index.md  inner.py  jorma.mk  oop.py
sdxpy/glob/: Makefile  glob_null.py  index.md  jorma.mk  simpler_match.py  test_glob_any.py  test_glob_either.py  test_glob_lit.py  test_glob_null.py  test_glob_problem.py  test_simpler_match.py
sdxpy/http/: index.md  jorma.mk
sdxpy/interp/: Makefile  index.md  jorma.mk
tests/: conftest.py  test_dynamic.py  test_static.py
(+98 files in other folders)
