[project]
name = "jorma"
description = "roles of variables"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
jorma = "jorma.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jorma"]

[tool.hatch.version]
path = "src/jorma/__init__.py"

[dependency-groups]
dev = [
    "build>=1.4.2",
    "coverage>=7.13.5",
    "pytest",
    "ruff",
    "twine>=6.2.0",
]
