[project]
name = "jorma"
description = "roles of variables"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "markdown>=3.10.2",
    "prettytable>=3.17.0",
]

[project.scripts]
jorma = "jorma.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jorma"]

[tool.hatch.version]
path = "src/jorma/__init__.py"

[dependency-groups]
dev = [
    "build>=1.4.2",
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "twine>=6.2.0",
]
